refactor: move js and css file(s) into folders, update index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Image clicker counter super-mini-app</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -41,6 +41,6 @@
     <footer></footer>
     </div>
 </body>
-<script src="app_mvo.js"></script>
+<script src="js/app_mvo.js"></script>
 
 </html>
